pbc_contract_codegen/tests/action/fail/zk/missing_zk_state_init.rs
use pbc_contract_codegen::init;

pub fn main() {}

#[init]
fn init(
    _context: pbc_contract_common::context::ContractContext,
) -> u64 {
    0
}
